--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           />
         </svg>
       </span>
+
+      <span><img src="./svg/date.svg" alt="date"</span>
+      
       <a href="https://mail.google.com/"
         ><img src="./svg/gmail.svg" alt="gmail"
       /></a>
