--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
        width="96" height="96" viewBox="0 0 96 96">
     <rect width="96" height="96" fill="#000"/>
     <text id="dayText"
-          x="48" y="56"
+          x="48" y="52"
           text-anchor="middle" dominant-baseline="middle"
           font-family="system-ui, sans-serif"
           font-size="40"
           stroke-width="2px"
           stroke="#07c" 
       letter-spacing="2">
-          fill="#07c">00</text>
+          fill="#000"></text>
   </svg>  
       </span>
       
