Add link to 3color.html with corresponding image

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <a href="https://kogcyc.github.io/files/test.html"><img src="./svg/newk96.svg" /></a>
 
 
-
+<a href="https://kogcyc.github.io/files/3color.html"><img src="./svg/ace.svg" /></a>
 
 
 
