--- a/index.html
+++ b/index.html
@@ -155,6 +155,16 @@
 
 <a href="https://kogcyc.github.io/files/OmegaNu.html"><img src="./svg/omega.svg" /></a>
 
+      <video
+  src="timer15s.mp4"
+  width="92"
+  height="92"
+  autoplay
+  loop
+  muted
+  playsinline
+></video>
+
       
     </div>
     <br /><br />
